[gd_scene load_steps=2 format=3 uid="uid://167bw0aqye6e"]

[ext_resource type="Script" uid="uid://kdxdow1la4n8" path="res://scripts/Hud.gd" id="1_qpvh6"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_qpvh6")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="BarPanel" type="Panel" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="XpBar" type="Control" parent="Root/BarPanel"]
anchors_preset = 0
offset_left = 80.0
offset_top = 16.0
offset_right = 1136.0
offset_bottom = 64.0

[node name="Back" type="ColorRect" parent="Root/BarPanel/XpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.007843138, 0, 0.011764706, 0.27058825)

[node name="Fill" type="ColorRect" parent="Root/BarPanel/XpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.33448496, 0.0014110011, 0.66417104, 1)

[node name="XpText" type="Label" parent="Root/BarPanel/XpBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelBadge" type="Panel" parent="Root/BarPanel"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 64.0
offset_bottom = 64.0

[node name="LevelLabel" type="Label" parent="Root/BarPanel/LevelBadge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
